--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-aiogram==3.1.0
-aiosqlite
-python-dotenv
-openpyxl
-apscheduler
+aiogram==3.13.1
+aiohttp==3.10.5
+pydantic==2.9.2
+aiosqlite==0.19.0
