--- a/fly.toml
+++ b/fly.toml
@@ -19,4 +19,7 @@ min_machines_running = 1
 [[services.ports]]
 port = 8080
 handlers = ["http"]
+[env]
+BOT_TOKEN="8523227582:AAHPOGm5qoTqxSBUliQTewVaiwrvpuu3UVY"
+ADMIN_IDS="8000075268"   # ← 管理员放这里
 
