--- a/fly.toml
+++ b/fly.toml
@@ -15,8 +15,8 @@ auto_rollback = true
 internal_port = 8080
 protocol = "tcp"
 auto_start_machines = true
-auto_stop_machines = true
-min_machines_running = 1
+auto_stop_machines = false     # ← 把这里改成 false
+min_machines_running = 1       # 保持至少一台机器在线
 
 [[services.ports]]
 port = 8080
